# coding-night-2023-backend

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  database.db  database.db-shm  database.db-wal  docker-compose.yml  docker-entrypoint.sh
migrations/: 20231201164130_init.sql
nginx/: Dockerfile  default.conf  nginx.conf
src/: auth.rs  esp_websockets.rs  main.rs  room.rs  router.rs  schedule.rs  websockets.rs
src/middleware/: jwt.rs
src/utils/: jwt.rs  mod.rs  pagination.rs
