[package]
name = "coding-night-2023-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.193", features = ["derive"] }
axum = "0.7.1"
tokio = { version = "1.34.0", features = ["full"] }
