[package]
name = "coding-night-2023-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.193", features = ["derive"] }
axum = { version = "0.7.1", features = ["ws"] }
axum-extra = { version = "0.9.0", features = ["cookie"] }
cookie = "0.18.0"
tower-cookies = "0.10.0"
tower-http = { version = "0.5.0", features = ["full"] }
argon2 = "0.5.2"
rand = "0.8.5"
tokio = { version = "1.34.0", features = ["full"] }
async-trait = "0.1.74"
jwt = "0.16.0"
hmac = "0.12.1"
dotenvy = "0.15.0"
sha2 = "0.10.8"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
serde_json = "1.0.108"
lazy_static = "1.4.0"
